[gd_scene load_steps=10 format=2]

[ext_resource path="res://media/Fonts/KenneyFuture10.tres" type="DynamicFont" id=1]
[ext_resource path="res://media/Fonts/KennyFutureNarrow16.tres" type="DynamicFont" id=2]
[ext_resource path="res://media/button_0.png" type="Texture" id=3]
[ext_resource path="res://ui/MonsterPreview.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 400, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 624, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 576, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 640, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 352, 64, 16, 16 )

[node name="Preview" type="PanelContainer"]
anchor_left = 0.967
anchor_top = 0.233
anchor_right = 0.967
anchor_bottom = 0.233
margin_left = -112.2
margin_top = -0.261261
margin_right = 0.799927
margin_bottom = 251.739
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 106.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MonsterName" type="Label" parent="VBoxContainer"]
margin_right = 98.0
margin_bottom = 18.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Gobo"
align = 1
autowrap = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_left = 6.0
margin_top = 18.0
margin_right = 91.0
margin_bottom = 98.0
rect_min_size = Vector2( 85, 80 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CenterContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 78.0
margin_bottom = 73.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer"]
margin_left = 1.0
margin_top = 17.0
margin_right = 33.0
margin_bottom = 49.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="VBoxContainer/PanelContainer/CenterContainer"]
margin_left = 33.0
margin_top = 1.0
margin_right = 69.0
margin_bottom = 65.0
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Health" type="HBoxContainer" parent="VBoxContainer/PanelContainer/CenterContainer/Stats"]
margin_right = 36.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Health"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Health"]
margin_left = 16.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "100"
align = 2

[node name="Damage" type="HBoxContainer" parent="VBoxContainer/PanelContainer/CenterContainer/Stats"]
margin_top = 16.0
margin_right = 36.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Damage"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Damage"]
margin_left = 16.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "10"
align = 2

[node name="Speed" type="HBoxContainer" parent="VBoxContainer/PanelContainer/CenterContainer/Stats"]
margin_top = 32.0
margin_right = 36.0
margin_bottom = 48.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Speed"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Speed"]
margin_left = 16.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "100"
align = 2

[node name="Reward" type="HBoxContainer" parent="VBoxContainer/PanelContainer/CenterContainer/Stats"]
margin_top = 48.0
margin_right = 36.0
margin_bottom = 64.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Reward"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/CenterContainer/Stats/Reward"]
margin_left = 16.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "5"
align = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
margin_left = 6.0
margin_top = 98.0
margin_right = 91.0
margin_bottom = 128.0
rect_min_size = Vector2( 85, 16 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Effects" type="GridContainer" parent="VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 78.0
margin_bottom = 23.0
rect_min_size = Vector2( 66, 16 )
size_flags_vertical = 5
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
margin_left = 6.0
margin_top = 128.0
margin_right = 91.0
margin_bottom = 238.0
rect_min_size = Vector2( 85, 110 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Effect_label" type="RichTextLabel" parent="VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 78.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
